plugins {
  id 'java'
}

group = 'io.event-driven'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
  mavenCentral()
}

dependencies {
  // Serialisation
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'

  // EventStoreDB client
  implementation 'com.eventstore:db-client-java:3.0.0'


  // Postgres and JPA for read models
  implementation 'junit:junit:4.13.2'

  implementation 'org.slf4j:slf4j-log4j13:1.0.1'
  implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
  implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
  implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'

  // Test frameworks
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
  testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
  testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
  testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
}

tasks.named('test') {
  useJUnitPlatform()
}

tasks.withType(JavaCompile) {
  options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
  jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
  jvmArgs += "--enable-preview"
}

test {
  testLogging.showStandardStreams = true
  testLogging.exceptionFormat = 'full'
}
